--- a/src/utils/OverlaySpinner.css
+++ b/src/utils/OverlaySpinner.css
@@ -7,7 +7,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  z-index: 1030 !important;
+  z-index: 1020 !important;
   display: flex;
   justify-content: center;
   align-items: center;
